fix: nav padding on mobile

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -12,5 +12,9 @@
     align-items: center;
     width: 100%;
     gap: 1rem;
+    padding-right: 1rem;
+    @media (min-width: 768px) {
+      padding-right: 0;
+    }
   }
 }
